--- a/app/src/main/res/layout/fragment_assistant_operation_mtn.xml
+++ b/app/src/main/res/layout/fragment_assistant_operation_mtn.xml
@@ -433,6 +433,7 @@
             </androidx.cardview.widget.CardView>
 
             <androidx.cardview.widget.CardView
+                android:visibility="gone"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_margin="15dp"
